--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: 
+  email: rmurdock@pillartechnology.com
   facebook: 
   flickr: 
-  github: 
-  instagram: 
+  github: robertfmurdock
+  instagram: zegreatrob
   linkedin: 
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
