--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ footer-links:
   twitter: zegreatrob
 
 # Your disqus shortname, entering this will enable commenting on posts
-disqus: zegreatrob
+disqus: rmur
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: 
