--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: RoB Murdock
 description: Swanky Software Surgeon
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/6215634?v=1
+avatar: https://avatars0.githubusercontent.com/u/6215634?v=1&s=70
 
 #
 # Flags below are optional
