--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   instagram: zegreatrob
   linkedin: 
   pinterest: 
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
+  rss: yes # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: zegreatrob
 
 # Your disqus shortname, entering this will enable commenting on posts
@@ -36,8 +36,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
-
+url: http://robertfmurdock.github.io/
 # If you're hosting your site at a Project repository on GitHub pages 
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
