Switching links to a personal email, just to keep things simple.

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars0.githubusercontent.com/u/6215634?v=1&s=140
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: rmurdock@pillartechnology.com
+  email: robert.f.murdock@gmail.com
   facebook: 
   flickr: 
   github: robertfmurdock
