--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,18 @@ description: Swanky Software Surgeon
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/6215634?v=1&s=140
 
-#
-# Flags below are optional
-#
+remote_theme: chrisbobbe/jekyll-theme-prologue
+collections: [sections]
 
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: rmurdock@pillartechnology.com
+  email: robert.f.murdock@gmail.com
   facebook: 
   flickr: 
   github: robertfmurdock
   instagram: zegreatrob
-  linkedin: 
+  linkedin: rob-murdock-0a09951
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: zegreatrob
