--- a/_config.yml
+++ b/_config.yml
@@ -30,27 +30,27 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: The Domain of RoB Murdock
+subtitle: Surgery for Software
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
-avatar: assets/images/avatar.jpg
+author: RoB Murdock
+email: robert.f.murdock@gmail.com
+avatar: https://avatars0.githubusercontent.com/u/6215634?v=1&s=140
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: http://robertfmurdock.github.io/
+baseurl: "" # the subpath of your site, e.g. /blog
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
-twitter_url:
+twitter_url: https://twitter.com/zegreatrob
 facebook_url:
 googleplus_url:
-instagram_url:
-linkedin_url:
-github_url:
+instagram_url: https://instagram.com/zegreatrob
+linkedin_url: https://linkedin.com/in/rob-murdock-0a09951
+github_url: https://github.com/robertfmurdock
 pinterest_url:
 slack_url:
 dribbble_url:
