--- a/_config.yml
+++ b/_config.yml
@@ -60,4 +60,7 @@ google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
 remote-theme: chrisbobbe/jekyll-theme-prologue
+# theme: jekyll-theme-prologue
 collections: [sections]
+
+exclude: ['TeamCoaching']
