--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,9 @@ google_analytics:
 # The following settings are NECESSARY for the Prologue theme to run:
 remote-theme: chrisbobbe/jekyll-theme-prologue
 # theme: jekyll-theme-prologue
-collections: [sections]
+collections:
+  sections:
+  career_sections:
+    output: true
 
 exclude: ['TeamCoaching', 'team-solar-system']
