--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,7 @@
 title: The Domain of RoB
 subtitle: Surgery for Software
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
+  This is RoB Murdock's domain, and you've entered a whole new world through a cupboard.
 author: RoB Murdock
 email: robert.f.murdock@gmail.com
 avatar: https://avatars0.githubusercontent.com/u/6215634?v=1&s=140
