--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -73,6 +73,8 @@ jobs:
         with:
           name: github-pages
           path: pages
+      - name: ls
+        run: ls pages
       - name: Untar
         run: tar -xvf pages/artifact.tar -C ~/site
       - name: Sync S3
