creating site directory

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -73,9 +73,7 @@ jobs:
         with:
           name: github-pages
           path: pages
-      - name: ls
-        run: ls pages
       - name: Untar
-        run: tar -xvf pages/artifact.tar -C ~/site
+        run: mkdir ~/site && tar -xvf pages/artifact.tar -C ~/site
       - name: Sync S3
         run: docker run --rm -it -v ~/.aws:/root/.aws -v ~/site:/site public.ecr.aws/aws-cli/aws-cli s3 sync /site www.zegreatrob.com --delete
