fixing s3 command path

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -76,4 +76,4 @@ jobs:
       - name: Untar
         run: mkdir ~/site && tar -xvf pages/artifact.tar -C ~/site
       - name: Sync S3
-        run: aws s3 sync /site s3://www.zegreatrob.com --delete
+        run: aws s3 sync ~/site s3://www.zegreatrob.com --delete
