adjusting the page titles and description for fun

--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: The Domain of RoB
-subtitle: Surgery for Software
+title: RoB Murdock
+subtitle: Software Surgeon
 description: >- # this means to ignore newlines until "baseurl:"
-  This is RoB Murdock's domain, and you've entered a whole new world through a cupboard.
+  This is RoB's place - where curiosity meets ferocity. Helping software help people, by getting it the care it needs. 🤖🏥
 author: RoB Murdock
 email: rob@zegreatrob.com
 avatar: https://www.gravatar.com/avatar/5d012724043778f39d9d4536706e4b2c?v=1&s=140
