--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-redirect-from
   - jemoji
+  - jekyll-feed
 whitelist:
   - jekyll-redirect-from
 include: ['.well-known']
