reverting failed image tweaks, and switching to excerpt only for feed

--- a/_config.yml
+++ b/_config.yml
@@ -73,3 +73,5 @@ whitelist:
   - jekyll-redirect-from
 include: ['.well-known']
 exclude: ['TeamCoaching', 'team-solar-system', 'vendor']
+feed:
+  excerpt_only: true
